@@ -31,8 +31,7 @@
 	     (rncschema "start = element foo { empty }\n")
 	     ((symbol-function 'file-exists-p)
 	      (lambda (file) (string-equal file rncfile)))
-	     ((symbol-function 'file-directory-p)
-	      (lambda (_file) t))
+	     ((symbol-function 'file-directory-p) #'stringp)
 	     ((symbol-function 'insert-file-contents)
 	      (lambda (file &rest _args)
 		(unless (string-equal file rncfile)
