@@ -1,5 +1,9 @@
 2025-01-08  Ulrich Müller  <ulm@gentoo.org>
 
+	* test/ebuild-mode-tests.el (ebuild-mode-test-get-builddir):
+	* test/devbook-mode-tests.el (devbook-mode-test-set-schema):
+	Replace anonymous no-op functions with stringp.
+
 	* test/ebuild-mode-tests.el (ebuild-mode-test-find-s): New test.
 
 2024-12-26  Ulrich Müller  <ulm@gentoo.org>
